# tinygl.android

./: .gitignore  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gl_gears.cpp  gl_gears.h  gl_hello.cpp  gl_hello.h  gl_hello2.cpp  gl_hello2.h  gl_menu.cpp  gl_menu.h  gl_model.cpp  gl_model.h  gl_texture.cpp  gl_texture.h  gl_touch_event.cpp  gl_touch_event.h  kkFileUtils.cpp  kkFileUtils.h  kkImage.cpp  kkImage.h  kk_log.h  native-lib.cpp  renderer_fixed.cpp  renderer_fixed.h  tinygl.hpp
app/src/main/cpp/tinygl/include-demo/: tobjparse.h
app/src/main/cpp/tinygl/src/: clip.c  zmath.c
app/src/main/java/com/example/androidtinygl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
